Fix some alignment problems in RobeCard.js

--- a/client/src/css/universal/RobeCard.css
+++ b/client/src/css/universal/RobeCard.css
@@ -1,6 +1,8 @@
 .robe-card {
   position: relative;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border-radius: 5px;
   z-index: 10;
   margin: 20px;
